# diffusion_pruning

./: .gitignore  LICENSE  LICENSE-CODE  README.md  blocks.py  env.yaml  gate_functions.py  hypernet.py  main.py  op_counter.py  pipelines.py  playground.py  pyproject.toml  test.py  unet_2d_conditional.py
cmmd-pytorch/: cmmd_utils.py  compute_cmmd.py  io_util.py  save_refs.py
configs/depth_analysis/: sd-2-1_cc3m.yaml
configs/filtering/: sd-2-1_cc3m.yaml  sd-2-1_coco2014.yaml
configs/finetuning/: sd-2-1_cc3m.yaml  sd-2-1_coco.yaml  sd-2-1_coco2014.yaml
configs/img_generation/: sd-2-1_cc3m.yaml
configs/pruning/: sd-2-1_cc3m-debug.yaml  sd-2-1_cc3m.yaml  sd-2-1_coco.yaml  sd-2-1_coco2014.yaml  sd-2-1_laion_aesthetics6_plus.yaml
data/: train_cc3m_bad_images.txt  validation_cc3m_bad_images.txt  validation_cc3m_names.pkl
losses/: clip_loss.py
models/: blocks.py  hypernet.py  unet_2d_conditional.py  utils.py
models/diffusion/: blocks.py  unet_2d_conditional.py
models/hypernet/: hypernet.py
models/vq/: quantizer.py
pdm/datasets/: __init__.py  cc3m.py  coco.py  dist_utils.py  laion_aes.py
pdm/losses/: __init__.py  (+3 more)
pipelines/: pruning_pipelines.py
requirements/: pt.txt
scripts/: calculate_pruning_ratio.py  clip_features.py  clip_score.py  depth_analysis.py  fid.py  filter_dataset.py  filter_fid_dataset.py  finetune-magnitude.py  finetune-random-arch.py  finetune.py  generate_fid_images.py  prune.py  prune_config.py  sample_coco_30k.py  save_captions.py
slurm_examples/: run_multi_node_cc3m.sh  test_multi_node_cc3m.sh
utils/: gates.py  op_counter.py
(+73 files in other folders)
